Moved pom and changed back to java 11